--- a/TileEditor/App.xaml
+++ b/TileEditor/App.xaml
@@ -70,6 +70,14 @@
             </Style.Triggers>
         </Style>
 
+        <Style x:Key="closeButton" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Red" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
         <Style TargetType="{x:Type ScrollViewer}">
             <Setter Property="Template">
                 <Setter.Value>
