--- a/TileEditor/ResizeLayerWindow.xaml
+++ b/TileEditor/ResizeLayerWindow.xaml
@@ -3,11 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TileEditor"
+        xmlns:local="clr-namespace:TileEditor" xmlns:shell="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=local:ResizeLayerWindowViewModel}"
         WindowStartupLocation="CenterOwner"
         Title="Resize layer">
+
+    <WindowChrome.WindowChrome>
+        <shell:WindowChrome CaptionHeight="36" GlassFrameThickness="0" CornerRadius="0" ResizeBorderThickness="5"/>
+    </WindowChrome.WindowChrome>
 
     <Window.Resources>
         <Style TargetType="local:ResizeLayerWindow">
@@ -15,10 +19,57 @@
             <Setter Property="SizeToContent" Value="Height" />
             <Setter Property="ResizeMode" Value="NoResize" />
             <Setter Property="Width" Value="500" />
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="local:ResizeLayerWindow">
+                        <Grid Background="#303040">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="36" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+
+                            <!-- Title bar-->
+                            <Grid Grid.Row="0" Background="#4D4D66" Panel.ZIndex="1">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <Border Grid.Column="0" Background="Transparent" Height="36" Width="36" />
+
+                                <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left">
+                                    <TextBlock FontSize="16" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Title}"   
+                                            VerticalAlignment="Top" HorizontalAlignment="Left"
+                                            Margin="4,0,0,0"/>
+                                </StackPanel>
+
+                                <StackPanel WindowChrome.IsHitTestVisibleInChrome="True" 
+                                            Grid.Column="2" Orientation="Horizontal">
+
+                                    <Border Width="36" Height="36" Padding="5">
+                                        <Button Style="{StaticResource closeButton}" Click="Close_Click">X</Button>
+                                    </Border>
+                                </StackPanel>
+
+                            </Grid>
+
+                            <Separator Grid.Row="1" />
+
+                            <!-- Content -->
+                            <Grid Grid.Row="2">
+                                <ContentPresenter Content="{TemplateBinding Content}" />
+                            </Grid>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
 
         <Style TargetType="Grid">
-            <Setter Property="Margin" Value="4" />
+
             <Style.Resources>
                 <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
                     <Setter Property="Margin" Value="0, 0, 0, 10" />
