--- a/TileEditor/App.xaml
+++ b/TileEditor/App.xaml
@@ -5,6 +5,11 @@
              StartupUri="MainWindow.xaml">
 
     <Application.Resources>
+        <Style TargetType="ToolTip">
+            <Setter Property="Background" Value="#303040" />
+            <Setter Property="BorderBrush" Value="White" />
+        </Style>
+
         <Style TargetType="Label">
             <Setter Property="FontSize" Value="16" />
             <Setter Property="Foreground" Value="White" />
