--- a/TileEditor/MainWindow.xaml
+++ b/TileEditor/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TileEditor" xmlns:shell="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         mc:Ignorable="d"
-        Title="Tile Editor" Height="450" Width="800"
+        Title="{Binding WindowTitle}" Height="450" Width="800"
         WindowState="Maximized">
 
     <WindowChrome.WindowChrome>
