--- a/TileEditor/MainWindow.xaml
+++ b/TileEditor/MainWindow.xaml
@@ -106,7 +106,7 @@
             <Button Grid.Row="0" Grid.Column="2" Command="{Binding SaveCommand}"
                     IsEnabled="{Binding CanSave}">Export level</Button>
             <Button Grid.Row="0" Grid.Column="3" Command="{Binding EditCommand}">Edit Level Properites</Button>
-            <Button Grid.Row="0" Grid.Column="4" Command="{Binding OpenResizeLayerWindowCommand}">Resize layer</Button>
+            <Button Grid.Row="0" Grid.Column="4" Command="{Binding OpenResizeLayerWindowCommand}">Resize layers</Button>
         </Grid>
 
         <Grid Grid.Row="1" Background="#303040">
