--- a/TileEditor/MainWindow.xaml
+++ b/TileEditor/MainWindow.xaml
@@ -126,7 +126,16 @@
 
             <GridSplitter Background="#4D4D66" HorizontalAlignment="Stretch" Width="5" Grid.Row="1" Grid.Column="3" />
 
-            <local:LayerSelector Grid.Column="4" />
+            <Grid Grid.Column="4">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                
+                <local:LayerSelector Grid.Row="0"/>
+
+                <local:EventPanel Grid.Row="1"/>
+            </Grid>
         </Grid>
 
     </Grid>
